containerization/templates/networkpolicy-nginx.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: open-public-nginx
spec:
  podSelector: 
    matchLabels: 
      name: nginx-chart
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector: 
        matchLabels:
          name: nginx-chart
    - ipBlock:
        cidr: 0.0.0.0/0
        except: 
          - 10.12.13.44/32
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          name: nginx-chart
    - ipBlock:
        cidr: 0.0.0.0/0
        except: 
          - 10.12.13.44/32
